pkg_config_files = \
	libyami_codecparser.pc \
	libyami_common.pc \
	libyami_decoder.pc \
	libyami_encoder.pc \
	libyami_vaapi.pc \
	libyami_vpp.pc \
	libyami.pc \
	$(NULL)

pkgconfigdir = @pkgconfigdir@
pkgconfig_DATA = $(pkg_config_files)

DISTCLEANFILES = \
	$(pkg_config_files) \
	Makefile.in \
	$(NULL)
